--- a/views/covidintro.ejs
+++ b/views/covidintro.ejs
@@ -1,70 +1,97 @@
-<%- include('nav2') %> 
+<%- include('nav2') %>
 
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-7">
-      <img src="/images/covidintro.png" class="card-img" alt="...">
+      <img src="/images/covidintro.png" class="card-img" alt="..." />
     </div>
     <div class="col-md-5">
       <div class="card-body">
         <h5 class="card-title">A Killing Machine</h5>
-        <p class="card-text">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
-<br/><br/>
-          Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.
-          <br/><br/>
-          The best way to prevent and slow down transmission is to be well informed about the COVID-19 virus, the disease it causes and how it spreads. Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face. </p>
-
+        <p class="card-text">
+          Coronavirus disease (COVID-19) is an infectious disease caused by a
+          newly discovered coronavirus. <br /><br />
+          Most people infected with the COVID-19 virus will experience mild to
+          moderate respiratory illness and recover without requiring special
+          treatment. Older people, and those with underlying medical problems
+          like cardiovascular disease, diabetes, chronic respiratory disease,
+          and cancer are more likely to develop serious illness.
+          <br /><br />
+          The best way to prevent and slow down transmission is to be well
+          informed about the COVID-19 virus, the disease it causes and how it
+          spreads. Protect yourself and others from infection by washing your
+          hands or using an alcohol based rub frequently and not touching your
+          face.
+        </p>
       </div>
     </div>
   </div>
 </div>
 
 <div class="card bg-dark text-white">
-  <img src="/images/image9.jpeg" class="card-img detection" alt="...">
-  <div class="card-img-overlay">
-  </div>
+  <img src="/images/image9.jpeg" class="card-img detection" alt="..." />
+  <div class="card-img-overlay"></div>
 </div>
-
 
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-6">
-      <img src="/images/prevention1.png" class="card-img" alt="...">
+      <img src="/images/prevention1.png" class="card-img" alt="..." />
     </div>
     <div class="col-md-6">
       <div class="card-body">
         <h5 class="card-title">COVID-19 PREVENTION</h5>
         <p class="card-text">SOAP OR SANITISER?</p>
-        <p>Sanitiser could seem like a more high-tech approach than a lowly bar of soap, and sanitisers with a very high ethanol content can act in a similar way to soap and interfere with the lipid membrane. However, they are generally not as effective as soap and water because the viral particles remain on the surface of the skin, rather than being rinsed away.</p>
+        <p>
+          Sanitiser could seem like a more high-tech approach than a lowly bar
+          of soap, and sanitisers with a very high ethanol content can act in a
+          similar way to soap and interfere with the lipid membrane. However,
+          they are generally not as effective as soap and water because the
+          viral particles remain on the surface of the skin, rather than being
+          rinsed away.
+        </p>
         <p>To prevent the spread of COVID-19:</p>
         <ul>
-<li>Clean your hands often. Use soap and water, or an alcohol-based hand rub.</li>
-<li>Maintain a safe distance from anyone who is coughing or sneezing.</li>
-<li>Wear a mask when physical distancing is not possible.</li>
-<li>Don’t touch your eyes, nose or mouth</li>
-<li>If you have a fever, cough and difficulty breathing, seek medical attention.</li>
-<li>Stay home if you feel unwell.</li>
-<li>Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</li>
+          <li>
+            Clean your hands often. Use soap and water, or an alcohol-based hand
+            rub.
+          </li>
+          <li>
+            Maintain a safe distance from anyone who is coughing or sneezing.
+          </li>
+          <li>Wear a mask when physical distancing is not possible.</li>
+          <li>Don’t touch your eyes, nose or mouth</li>
+          <li>
+            If you have a fever, cough and difficulty breathing, seek medical
+            attention.
+          </li>
+          <li>Stay home if you feel unwell.</li>
+          <li>
+            Cover your nose and mouth with your bent elbow or a tissue when you
+            cough or sneeze.
+          </li>
         </ul>
-<h5>Masks</h5>
-<p>Masks can help prevent the spread of the virus from the person wearing the mask to others. Masks alone do not protect against COVID-19, and should be combined with physical distancing and hand hygiene. Follow the advice provided by your local health authority.</p>
+        <h5>Masks</h5>
+        <p>
+          Masks can help prevent the spread of the virus from the person wearing
+          the mask to others. Masks alone do not protect against COVID-19, and
+          should be combined with physical distancing and hand hygiene. Follow
+          the advice provided by your local health authority.
+        </p>
       </div>
     </div>
   </div>
 </div>
 
-
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-6">
-      <img src="/images/image12.jpeg" class="card-img" alt="...">
+      <img src="/images/image12.jpeg" class="card-img" alt="..." />
     </div>
     <div class="col-md-6">
-      <img src="/images/threelayer1.jpg" class="card-img" alt="...">
-   
+      <img src="/images/threelayer1.jpg" class="card-img" alt="..." />
     </div>
   </div>
 </div>
 
-
-<%- include('footer') %> 
+<%- include('footer') %>
