--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,6 +1,12 @@
 <%- include("nav2") -%>
 
-<form class="" action="/users/saveform" method="post">
+<form class="suggestion" action="/users/saveform" method="post">
+  <div class="suggestion-div">
+    <p class="lead mb-3">Welcome <%= name %></p>
+    <a href="/users/logout" class="btn btn-secondary">Logout</a>
+    <a href="/home" class="btn btn-secondary">Home</a>
+  </div>
+
     <section id="suggestionForm">
       <div class="container-fluid">
         <div class="row welcome text-center">
@@ -22,6 +28,7 @@
                   placeholder="Write your name here"
                   name="username"
                   required
+                  autocomplete="off"
                 />
               </div>
               <div class="form-group">
@@ -33,6 +40,7 @@
                   placeholder="name@example.com"
                   name="usermail"
                   required
+                  autocomplete="off"
                 />
               </div>
 
@@ -45,6 +53,8 @@
                   name="mysuggestion"
                   required
                   minlength="11"
+                  placeholder="Write your suggestion"
+
                 ></textarea>
                 <input
                   type="submit"
@@ -61,19 +71,19 @@
               </div>
             </form>
           </div>
-          <div class="col-md-4 center">
-            <img src="images/suggest.png" alt="" />
+          <div class="col-md-4 center" style="text-align: center;">
+            <img src="../images/suggest.png" alt="" />
           </div>
         </div>
       </div>
     </section>
+
+    <a href="/users/subpage">See suggestions given by all people.</a>
   </form>
 
 
 
 
 
-<p class="lead mb-3">Welcome <%= name %></p> 
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
-<a href="/home" class="btn btn-secondary">Home</a>
+
 <%- include("footer") -%>
