--- a/views/form.ejs
+++ b/views/form.ejs
@@ -77,8 +77,10 @@
         </div>
       </div>
     </section>
+    <div class="all-suggestion">
+      <a href="/users/subpage">See suggestions given by all people.</a>
+    </div>
 
-    <a href="/users/subpage">See suggestions given by all people.</a>
   </form>
 
 
