Add new content in history.ejs

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,110 +1,122 @@
 <%- include('nav2') %>
 <div id="cover">
-<div class="part1">
-  <h1>History</h1>
-  <p>
-    Coronaviruses were first discovered in the 1930s when an acute respiratory
-    infection of domesticated chickens was shown to be caused by infectious
-    bronchitis virus (IBV). In the 1940s, two more animal coronaviruses, mouse
-    hepatitis virus (MHV) and transmissible gastroenteritis virus(TGEV), were
-    isolated. It was not realized at the time that these three different viruses
-    were related.​ Human coronaviruses were discovered in the 1960s.
-  </p>
-  <p>
-    Human coronaviruses have since been identified, including SARS-CoV in 2003,
-    HCoV NL63 in 2004, HCoV HKU1 in 2005, MERS-CoV in 2012, and SARS-CoV-2 in
-    2019. There have also been a large number of animal coronaviruses identified
-    since the 1960s
-  </p>
-  <p>
-    A novel strain of coronavirus — SARS-CoV-2 — was first detected in December
-    2019 in Wuhan, a city in China’s Hubei province with a population of 11
-    million, after an outbreak of pneumonia without an obvious cause. The virus
-    has now spread to over 200 countries and territories across the globe, and
-    was characterised as a pandemic by the World Health Organization (WHO) on 11
-    March 2020.​ ​ As of 26 July 2020, there are about 14 Million
-    laboratory-confirmed cases of coronavirus disease 2019 (COVID-19) infection
-    globally, with 6 lakh reported deaths.
-  </p>
-</div>
-<div class="part2">
+  <div class="part1">
+    <h1>History</h1>
+    <div class="history-theory">
+      <p>
+        Coronaviruses were first discovered in the 1930s when an acute respiratory
+        infection of domesticated chickens was shown to be caused by infectious
+        bronchitis virus (IBV). In the 1940s, two more animal coronaviruses, mouse
+        hepatitis virus (MHV) and transmissible gastroenteritis virus(TGEV), were
+        isolated. It was not realized at the time that these three different viruses
+        were related.​ Human coronaviruses were discovered in the 1960s.
+      </p>
+      <p>
+        Human coronaviruses have since been identified, including SARS-CoV in 2003,
+        HCoV NL63 in 2004, HCoV HKU1 in 2005, MERS-CoV in 2012, and SARS-CoV-2 in
+        2019. There have also been a large number of animal coronaviruses identified
+        since the 1960s
+      </p>
+      <p>
+        A novel strain of coronavirus — SARS-CoV-2 — was first detected in December
+        2019 in Wuhan, a city in China’s Hubei province with a population of 11
+        million, after an outbreak of pneumonia without an obvious cause. The virus
+        has now spread to over 200 countries and territories across the globe, and
+        was characterised as a pandemic by the World Health Organization (WHO) on 11
+        March 2020.​ ​ As of 26 July 2020, there are about 14 Million
+        laboratory-confirmed cases of coronavirus disease 2019 (COVID-19) infection
+        globally, with 6 lakh reported deaths.
+      </p>
+    </div>
+
+  </div>
+  <div class="part2">
     <h1>HUMAN CORONA VIRUS</h1>
     <p>Coronaviruses are named for the crown-like spikes on their surface. There are four main sub-groupings of coronaviruses, known as alpha, beta, gamma, and delta.​
 
-        Human coronaviruses were first identified in the mid-1960s.</p>
-        <div class="part21">
+      Human coronaviruses were first identified in the mid-1960s.</p>
+    <div class="part2-1">
+      <div class="left">
         <h3>Common Human Coronaviruses</h3>
         <ul>
-            <li>229E (alpha coronavirus)</li>
-            <li>NL63 (alpha coronavirus)</li>
-            <li>OC43 (beta coronavirus)</li>
-            <li>HKU1 (beta coronavirus)</li>
+          <li>229E (alpha coronavirus)</li>
+          <li>NL63 (alpha coronavirus)</li>
+          <li>OC43 (beta coronavirus)</li>
+          <li>HKU1 (beta coronavirus)</li>
         </ul>
+      </div>
+      <div class="right">
         <h3>Other Human Coronaviruses</h3>
         <ul>
-            <li>MERS-CoV (the beta coronavirus that causes Middle East Respiratory Syndrome, or MERS)</li>
-            <li>SARS-CoV (the beta coronavirus that causes severe acute respiratory syndrome, or SARS)</li>
-            <li>SARS-CoV-2 (the novel coronavirus that causes coronavirus disease 2019, or COVID-19)</li>
+          <li>MERS-CoV (the beta coronavirus that causes Middle East Respiratory Syndrome, or MERS)</li>
+          <li>SARS-CoV (the beta coronavirus that causes severe acute respiratory syndrome, or SARS)</li>
+          <li>SARS-CoV-2 (the novel coronavirus that causes coronavirus disease 2019, or COVID-19)</li>
         </ul>
-        </div>
-</div>
-
-
-<div class="card mb-3">
-    <div class="row no-gutters">
-      <div class="col-md-6">
-        <img src="images/origin.png" class="card-img" alt="...">
       </div>
-      <div class="col-md-6 origin">
-        <div class="card-body">
-          <h5 class="card-title mt-5">From Where?</h5>
-          <p class="card-text">Experts say SARS-CoV-2 originated in bats. That’s also how the coronaviruses behind Middle East respiratory syndrome (MERS) and severe acute respiratory syndrome (SARS) got started.<br/>
-<br/>
-            SARS-CoV-2 made the jump to humans at one of Wuhan’s open-air “wet markets.” They’re where customers buy fresh meat and fish, including animals that are killed on the spot.<br/>
-            <br/>
-            Some wet markets sell wild or banned species like cobras, wild boars, and raccoon dogs. Crowded conditions can let viruses from different animals swap genes. Sometimes the virus changes so much it can start to infect and spread among people
-          </p>
+    </div>
+  </div>
+
+  <div id="origin">
+    <div class="card mb-3">
+      <div class="row no-gutters">
+        <div class="col-md-6">
+          <img src="images/origin.png" class="card-img" alt="...">
+        </div>
+        <div class="col-md-6 origin">
+          <div class="card-body">
+            <h5 class="card-title mt-5">From Where?</h5>
+            <p class="card-text">Experts say SARS-CoV-2 originated in bats. That’s also how the coronaviruses behind Middle East respiratory syndrome (MERS) and severe acute respiratory syndrome (SARS) got started.<br />
+              <br />
+              SARS-CoV-2 made the jump to humans at one of Wuhan’s open-air “wet markets.” They’re where customers buy fresh meat and fish, including animals that are killed on the spot.<br />
+              <br />
+              Some wet markets sell wild or banned species like cobras, wild boars, and raccoon dogs. Crowded conditions can let viruses from different animals swap genes. Sometimes the virus changes so much it can start to infect and spread among
+              people
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="card mb-3">
-    <div class="row no-gutters">
+  <div class="struct">
+    <div class="card mb-3">
+      <div class="row no-gutters">
         <div class="col-md-6 structure">
-            <div class="card-body">
-                <h5 class="card-title">Structure of Coronavirus</h5>
-                <p class="card-text">Coronaviruses are large, roughly spherical particles with unique surface projections.[44] Their size is highly variable and generally is an average diameter of 120 nm. Extreme sizes are known from 50 to 200 nm in diameter.[45] The total molecular weight is on average 40,000 kDa. They are enclosed in an envelope embedded with a number of protein molecules.[46] The lipid bilayer envelope, membrane proteins, and nucleocapsid protect the virus when it is outside the host cell.[</p>
-                <p class="card-text">
-                  <a href="https://en.wikipedia.org/wiki/Coronavirus#Structure"
-                  class="btn btn-primary btn-lg" >For more details</a
-                >
-              </p>
-               
-            </div>
+          <div class="card-body">
+            <h5 class="card-title" style="font-size: 1.5rem;">Structure of Coronavirus</h5>
+            <p class="card-text">Coronaviruses are large, roughly spherical particles with unique surface projections.[44] Their size is highly variable and generally is an average diameter of 120 nm. Extreme sizes are known from 50 to 200 nm in
+              diameter.[45] The total molecular weight is on average 40,000 kDa. They are enclosed in an envelope embedded with a number of protein molecules.[46] The lipid bilayer envelope, membrane proteins, and nucleocapsid protect the virus when
+              it is outside the host cell.[</p>
+            <p class="card-text" style="text-align: center;">
+              <a href="https://en.wikipedia.org/wiki/Coronavirus#Structure" class="btn btn-primary btn-lg">For more details</a>
+            </p>
+
+          </div>
         </div>
-                                  <div class="col-md-6">
-                                    <img src="images/structure.png" class="card-img" alt="...">
-                                  </div>
+        <div class="col-md-6">
+          <img src="images/structure.png" class="card-img" alt="...">
+        </div>
+      </div>
     </div>
+
   </div>
 
 
-<div class="part5">
+  <div class="part5">
     <h3>What is the ACE2 receptor, how is it connected to coronavirus and why might it be key to treating COVID-19?</h3>
     <h5>Where in the body is it found?</h5>
-    <div class="card mb-3">
-        <div class="row no-gutters">
-            <div class="col-md-6">
-                <img src="images/image7.jpeg" class="w-50 ace1" alt="">
-            </div>
-                                      <div class="col-md-6">
-                                        <img src="images/image6.jpeg" class="ace2" alt="...">
-                                      </div>
+    <div class="card mb-3 part-5-img">
+      <div class="row no-gutters">
+        <div class="col-md-6">
+          <img src="images/image7.jpeg" class="w-50 ace1" alt="">
+        </div>
+        <div class="col-md-6">
+          <img src="images/image6.jpeg" class="ace2" alt="...">
         </div>
       </div>
-    
-</div>
+    </div>
+
+  </div>
 
 
 
