--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -20,106 +20,17 @@
 <footer id="footer-section">
   <!-- Section 1 -->
   <section class="section-1">
-    <!-- Section 1 part1 -->
-    <section class="about">
-      <h2>About</h2>
-      <p>
-        Our team wants to be simple is an initiative to help the upcoming
-        programmers with tge code. K-Labs focuses on providing the most
-        efficient code or snippets as the code wants to be simple. We will help
-        programmers to build up concepts in different programmming languages
-        that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP,
-        Android, SQL and Alogrithm.
-      </p>
-    </section>
-
-    <!-- Section 1 part2 -->
-    <section class="links1">
-      <h2>Categories</h2>
-      <ul>
-        <li><a href="#">JavaScript</a></li>
-        <li><a href="#">Node JS</a></li>
-        <li><a href="#">UI Design</a></li>
-        <li><a href="#">Java</a></li>
-        <li><a href="#">Python</a></li>
-      </ul>
-    </section>
-
-    <!-- Section 1 part3 -->
-    <section class="links2">
-      <h2>Quick Links</h2>
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Contribute</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Sitemap</a></li>
-        <li><a href="#">Disclaimer</a></li>
-      </ul>
-    </section>
-
-    <!-- Section 4 part4 -->
-    <section class="links3">
-      <h2>Contact us</h2>
-      <ul>
-        <li>
-          <i class="fa fa-home"></i><span>SCO-75, Chandigarh, India</span>
-        </li>
-        <li>
-          <i class="fa fa-envelope"></i> <span>KlabsIndia@gmail.com</span>
-        </li>
-        <li>
-          <i class="fa fa-phone-square"></i> <span>Mobile: 1234567894</span>
-        </li>
-        <li>
-          <i class="fa fa-facebook-official"></i>
-          <span><a href="#">KLabsIndiaCo.</a></span>
-        </li>
-      </ul>
-    </section>
+    <div class="member-1">
+      <img src="images/download.png" alt="">
+      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
+    </div>
+    <div class="member-2">
+      <img src="images/download.png" alt="">
+      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
+    </div>
   </section>
 
-  <!-- Horizontal line -->
-  <hr width="100%" />
-
-  <!-- Section 2 -->
   <section class="section-2">
-    <h2>Register For Free</h2>
-    <a href="#">SignUp!</a>
-  </section>
-
-  <!-- Horizontal line -->
-  <hr width="100%" />
-
-  <!-- Section 3 -->
-  <section class="section-3">
-    <ul>
-      <li>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-google"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Horizontal line -->
-  <hr width="100%" />
-
-  <!-- Section 4 -->
-  <section class="section-4">
-    <p>
-      Copyright @ 2020 All Rights Reserved by
-      <a href="practical9.html">Our Team</a>
-    </p>
+    <p style="text-align: center;">Copyright Covid Labs @2020</p>
   </section>
 </footer>
