--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -360,537 +360,50 @@ h4 {
 
 /* Footer Section */
 #footer-section {
-  background: #14274e;
   padding: 3%;
-  padding-bottom: 1%;
 }
 
-#footer-section hr {
-  background-color: #f1f6f9;
-}
-/* Section 1 */
-.section-1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 30px 10px;
+.member-1 {
+  width: 65%;
+  margin:auto;
 }
 
-.about {
-  width: 40%;
+.member-1::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
-.about h2 {
-  font-size: 1.7rem;
-  color: lightgray;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
-
-.about p {
-  text-align: justify;
-  color: gray;
-  line-height: 24px;
-}
-
-.section-1 ul {
-  list-style-type: none;
-  line-height: 24px;
-}
-
-/* All links port h2 */
-.links1 h2,
-.links2 h2,
-.links3 h2 {
-  color: lightgray;
-  font-size: 1.4rem;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-}
-
-/* targetting all anchor elements */
-a {
-  text-decoration: none;
-  color: gray;
-}
-
-a:hover {
-  color: orange;
-}
-
-/* targetting all span elements */
-span {
-  color: gray;
-  padding-left: 10px;
-}
-
-.pick {
-  color: blue;
-}
-
-/* font icons */
-i {
-  color: gray;
-  font-size: 20px;
-}
-
-.section-2 {
-  display: flex;
-  justify-content: center;
-  padding: 1%;
-}
-
-/* Section 2 */
-.section-2 h2 {
-  color: gray;
-  font-size: 1.7rem;
-  padding-right: 10px;
-}
-
-.section-2 a {
-  display: inline-block;
-  padding: 10px 15px;
-  color: white;
-  background: red;
-  border-radius: 20px;
-}
-
-.section-2 a:hover {
-  background-color: blue;
-}
-
-/* Section -3  */
-.section-3 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1%;
-}
-
-.section-3 ul li {
-  display: inline-block;
-  width: 60px;
-  height: 60px;
-  padding: 20px;
-  background-color: #424242;
-  border-radius: 50%;
+.member-1 img {
+  float: left;
   margin-right: 20px;
 }
 
-.section-3 ul li i {
-  color: white;
-  font-size: 1.7rem;
-  line-height: 20px;
-  text-align: center;
+.member-1 p {
+  padding: 20px;
+  text-align: justify;
 }
 
-.section-3 ul li:nth-child(1):hover {
-  background-color: #3b5999;
+.member-2 {
+  width: 70%;
+  margin:40px auto;
 }
 
-.section-3 ul li:nth-child(2):hover {
-  background-color: #55acee;
+.member-2 img {
+  float: right;
+  margin-left: 20px;
 }
 
-.section-3 ul li:nth-child(3):hover {
-  background-color: #dd4b39;
+.member-2 p {
+  padding: 20px;
+  text-align: justify;
 }
 
-.section-3 ul li:nth-child(4):hover {
-  background-color: #007785;
-}
-
-.section-3 ul li:nth-child(5):hover {
-  background-color: #ea4c89;
-}
-
-/* Section 4 */
-.section-4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.section-4 p {
-  font-size: 1.5rem;
-  color: gray;
-  position: relative;
-}
-
-.section-4 p::after {
+.member-2::after {
   content: "";
   display: block;
-  width: 0;
-  height: 2px;
-  position: absolute;
-  right: 0;
-  bottom: -10px;
-  background-color: yellow;
-  transition: 0.3s;
+  clear: both;
 }
-
-.section-4 p:hover::after {
-  width: 100%;
-}
-
-hr {
-  opacity: 0.2;
-}
-
-@media (max-width: 970px) {
-  .main-section {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 2.3rem;
-    color: red;
-  }
-
-  .section-1 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 30px 10px;
-  }
-
-  .about {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  .about h2 {
-    font-size: 1.7rem;
-    color: lightgray;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-  }
-
-  .about p {
-    text-align: justify;
-    color: gray;
-    line-height: 24px;
-  }
-
-  .section-1 ul {
-    list-style-type: none;
-    line-height: 24px;
-  }
-
-  .links1 h2,
-  .links2 h2,
-  .links3 h2 {
-    color: lightgray;
-    font-size: 1.4rem;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-  }
-
-  a {
-    text-decoration: none;
-    color: gray;
-  }
-
-  a:hover {
-    color: orange;
-  }
-
-  span {
-    color: gray;
-    padding-left: 10px;
-  }
-
-  i {
-    color: gray;
-    font-size: 20px;
-  }
-
-  .section-2 {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-  }
-
-  .section-2 h2 {
-    color: gray;
-    font-size: 1.7rem;
-    padding-right: 10px;
-  }
-
-  .section-2 a {
-    display: inline-block;
-    padding: 10px 15px;
-    color: white;
-    background: red;
-    border-radius: 20px;
-  }
-
-  .section-2 a:hover {
-    background-color: blue;
-  }
-
-  .section-3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2%;
-  }
-
-  .section-3 ul li {
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    padding: 20px;
-    background-color: #424242;
-    border-radius: 50%;
-    margin-right: 20px;
-  }
-
-  .section-3 ul li i {
-    color: white;
-    font-size: 1.7rem;
-    line-height: 20px;
-    text-align: center;
-  }
-
-  .section-3 ul li:nth-child(1):hover {
-    background-color: #3b5999;
-  }
-
-  .section-3 ul li:nth-child(2):hover {
-    background-color: #55acee;
-  }
-
-  .section-3 ul li:nth-child(3):hover {
-    background-color: #dd4b39;
-  }
-
-  .section-3 ul li:nth-child(4):hover {
-    background-color: #007785;
-  }
-
-  .section-3 ul li:nth-child(5):hover {
-    background-color: #ea4c89;
-  }
-
-  .section-4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px;
-  }
-
-  .section-4 p {
-    color: gray;
-    position: relative;
-  }
-
-  .section-4 p::after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    position: absolute;
-    right: 0;
-    bottom: -10px;
-    background-color: yellow;
-    transition: 0.3s;
-  }
-
-  .section-4 p:hover::after {
-    width: 100%;
-  }
-
-  hr {
-    opacity: 0.2;
-  }
-}
-
-@media (max-width: 566px) {
-  .main-section {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 2.3rem;
-    color: red;
-  }
-
-  footer {
-    background: #26272b;
-  }
-
-  .section-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 30px 10px;
-  }
-
-  .about {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  .about h2 {
-    font-size: 1.7rem;
-    text-align: center;
-    color: lightgray;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-  }
-
-  .about p {
-    text-align: justify;
-    color: gray;
-    line-height: 24px;
-  }
-
-  .section-1 ul {
-    list-style-type: none;
-    line-height: 24px;
-  }
-
-  .links1 h2,
-  .links2 h2,
-  .links3 h2 {
-    color: lightgray;
-    font-size: 1.4rem;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    margin-top: 20px;
-  }
-
-  .links3 ul,
-  .links2 ul,
-  .links1 ul {
-    text-align: left;
-    width: 70%;
-    margin: auto;
-  }
-
-  a {
-    text-decoration: none;
-    color: gray;
-  }
-
-  a:hover {
-    color: orange;
-  }
-
-  span {
-    color: gray;
-    padding-left: 10px;
-  }
-
-  .pick {
-    color: blue;
-    display: block;
-  }
-
-  i {
-    color: gray;
-    font-size: 20px;
-  }
-
-  .section-2 {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-  }
-
-  .section-2 h2 {
-    color: gray;
-    font-size: 1.7rem;
-    padding-right: 10px;
-  }
-
-  .section-2 a {
-    display: inline-block;
-    padding: 10px 15px;
-    color: white;
-    background: red;
-    border-radius: 20px;
-  }
-
-  .section-2 a:hover {
-    background-color: blue;
-  }
-
-  .section-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2%;
-  }
-
-  .section-3 ul li {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-    background-color: #424242;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-
-  .section-3 ul li i {
-    color: white;
-    font-size: 1.7rem;
-    line-height: 20px;
-    text-align: center;
-  }
-
-  .section-3 ul li:nth-child(1):hover {
-    background-color: #3b5999;
-  }
-
-  .section-3 ul li:nth-child(2):hover {
-    background-color: #55acee;
-  }
-
-  .section-3 ul li:nth-child(3):hover {
-    background-color: #dd4b39;
-  }
-
-  .section-3 ul li:nth-child(4):hover {
-    background-color: #007785;
-  }
-
-  .section-3 ul li:nth-child(5):hover {
-    background-color: #ea4c89;
-  }
-
-  .section-4 {
-    display: flex;
-    justify-content: center;
-
-    padding: 30px;
-  }
-
-  .section-4 p {
-    color: gray;
-    font-size: 1rem;
-    position: relative;
-  }
-
-  .section-4 p::after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    position: absolute;
-    right: 0;
-    bottom: -10px;
-    background-color: yellow;
-    transition: 0.3s;
-  }
-
-  .section-4 p:hover::after {
-    width: 100%;
-  }
-
-  hr {
-    opacity: 0.2;
-  }
-}
-
 /* COVID LIVE */
 table {
   margin-top: 20px;
@@ -913,56 +426,111 @@ table {
 #cover{
 }
 .part1{
-  padding: 10px;
+  padding: 3%;;
   /* background-color:	 #1aff8c; */
-  background-color: #6bbaa7;
+  background-color: #b9fffc;
   /* color: white; */
 }
+
 .part1 h1{
+  padding: 10px 0;
   text-align: center;
+  color: #120078;
+  font-family: cursive;
 }
+
+.history-theory {
+    padding: 3%;
+
+}
+
+.history-theory p {
+  color: #0f3460;
+  font-family: fantasy;
+  font-size: 1.4rem;
+}
+
 .part1 p, .part2 p{
   text-align: justify;
   line-height: 30px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 500;
 }
+
 .part2{
-  padding: 10px;
-  background-color: gray;
+  padding: 3%;
+  background-color: #a5ecd7;
   color: white;
 }
+
 .part2 h1{
   text-align: center;
+  color: #120078;
+  font-family: cursive;
 }
-.part21{
-  background-color: wheat;
+
+.part2 p {
+  padding: 20px;
+  color: #0f3460;
+  font-size: 1.4rem;
+}
+
+.part2-1{
+  background-color: #effad3;
   color: black;
-  /* display: flex; */
-  /* justify-content: center; */
   text-align: center;
+  width: 68%;
+  margin: auto;
   padding-bottom: 5px;
+  padding: 3%;
+  border-radius: 20px;
 }
-.part21 li{
-  list-style-type: square;
-}
-/* .part3{
-  display: flex;
-}
-.part3 img{
 
- width: 50%;
-
+.part2-1 h3 {
+  margin-bottom: 20px;
 }
-.part3 p{
 
-  margin-top: 100px;
+.left h3 {
+  color: #120078;
 }
-.part41{
-  display: flex;
-} */
 
-/* origin */
+.left ul {
+  color: #0f3460;
+}
+
+.right h3 {
+  color: #120078;
+}
+
+.right ul {
+  color: #0f3460;
+}
+
+.part2-1 li{
+  list-style-type: none;
+}
+
+#origin {
+  padding: 3%;
+  background-color: #e0ece4;
+}
+
+.card-body h5 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+    color: #120078;
+}
+
+.card-body p {
+  text-align: justify;
+  color: #0f3460;
+}
+
+.struct {
+  padding: 3%;
+  background-color:#ecf4f3;
+}
+
 .origin{
   color: white;
   background-color: rgb(16, 170, 221);
@@ -972,13 +540,28 @@ table {
 }
 
 .part5{
-  padding: 10px;
-  background-color: #501b1d;
+  padding: 3%;
+  background-color: #f2a07b;
   color: white;
 }
-.part5 h5{
+
+.part5 h3{
   text-align: center;
+  padding: 3%;
+  color: #120078;
 }
+
+.part5 h5 {
+  text-align: center;
+  font-size: 1.3rem;
+  color: #120078;
+}
+
+.part-5-img {
+  padding: 3%;
+  background-color: #fbdcc4;
+}
+
 .ace1{
 margin-left: 200px;
 margin-top: 15px;
