fix some issues

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -21,11 +21,11 @@
   <!-- Section 1 -->
   <section class="section-1">
     <div class="member-1">
-      <img src="images/download.png" alt="">
+      <img src="../images/download.png" alt="">
       <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
     </div>
     <div class="member-2">
-      <img src="images/download.png" alt="">
+      <img src="../images/download.png" alt="">
       <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
     </div>
   </section>
