Add more in gdp

--- a/views/gdp.ejs
+++ b/views/gdp.ejs
@@ -1,12 +1,12 @@
-<%- include('nav2') %> 
+<%- include('nav2') %>
 <div class="gdpDiv card mb-3">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="/images/gdp.jpg" class="gdp1 card-img" alt="...">
-        <img src="/images/gdp2.jpg" class="gdp2 card-img" alt="...">
+        <img src="../images/gdp.jpg" class="gdp1 card-img" alt="...">
+        <img src="../images/gdp2.jpg" class="gdp2 card-img" alt="...">
       </div>
       <div class="col-md-8">
-        <div class="card-body">
+        <div class="card-body gdpcard">
             <h5 class="card-title">
                 Economic impact of the COVID-19 pandemic in India
               </h5>
