Add link for covid intro

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
     <div class="container-fluid padding">
       <div class="row padding">
         <div class="col-lg-6">
-          <h2>If you build it (GDP)...</h2>
+          <h2>Economic impact on GDP</h2>
           <br/>
           <p>The economic impact of the 2020 coronavirus pandemic in India has been largely disruptive. India's growth in the fourth quarter of the fiscal year 2020 went down to 3.1% according to the Ministry of Statistics.
            </p>
@@ -106,7 +106,7 @@
               <p class="card-text">
               <i>No matter how much falls on us, we keep plowing ahead. That's the only way to keep roads clear.</i>
               </p>
-              
+
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
               <p class="card-text">
             <i>You are the greatest hero in this story. Your intelligence, bravery and compassion are the saving grace of this nation during this dark episode.</i>
               </p>
-             
+
             </div>
           </div>
         </div>
@@ -151,7 +151,7 @@
           <div class="card-body">
             <h5 class="card-title">WHAT IS COVID?</h5>
             <p class="card-text">Precautions and Symptoms for COVID</p>
-            <a href="#" class="btn btn-primary">Go in Detail</a>
+            <a href="/covidintro" class="btn btn-primary">Go in Detail</a>
           </div>
         </div>
       </div>
