fix image path issues

--- a/views/covidintro.ejs
+++ b/views/covidintro.ejs
@@ -3,7 +3,7 @@
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-7">
-      <img src="/images/covidintro.png" class="card-img" alt="..." />
+      <img src="../images/covidintro.png" class="card-img" alt="..." />
     </div>
     <div class="col-md-5">
       <div class="card-body">
@@ -29,7 +29,7 @@
 </div>
 
 <div class="card bg-dark text-white">
-  <img src="/images/image9.jpeg" class="card-img detection" alt="..." />
+  <img src="../images/image9.jpeg" class="card-img detection" alt="..." />
   <div class="card-img-overlay"></div>
 </div>
 
