--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,20 +1,8 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-  crossorigin="anonymous"
-></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 <!-- footer of our page -->
 <footer id="footer-section">
@@ -22,11 +10,13 @@
   <section class="section-1">
     <div class="member-1">
       <img src="../images/download.png" alt="">
-      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
+      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in
+        different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
     </div>
     <div class="member-2">
       <img src="../images/download.png" alt="">
-      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
+      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in
+        different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
     </div>
   </section>
 
