--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,70 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Covid-19</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="../css/styles.css" />
-  </head>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 
-  <body>
-    <section id="navigation">
-      <nav class="navbar navbar-expand-md navbar-dark sticky-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/images/logo.jpeg" /> </a>
+  <title>Covid-19</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarResponsive"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#meet-team">Awareness</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/saveform">Suggestion</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#detailed">Covid</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#footer-section">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/login" target="_blank" >Signin</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/register">Register</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </section>
-  </body>
+<body>
+  <section id="navigation">
+    <nav class="navbar navbar-expand-md navbar-dark sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="/images/logo.jpeg" /> </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#meet-team">Awareness</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/saveform">Suggestion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#detailed">Covid</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#footer-section">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/login" target="_blank">Signin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/register">Register</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </section>
+</body>
+
 </html>
