--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,11 +2,7 @@
 
 <body>
   <!-- carousel for homepage -->
-  <div
-    id="carouselExampleFade"
-    class="carousel slide carousel-fade"
-    data-ride="carousel"
-  >
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/caro2.jpg" class="w-70 caro" alt="..." />
@@ -18,21 +14,11 @@
         <img src="/images/Corona.png" class="w-70 caro" alt="..." />
       </div>
     </div>
-    <a
-      class="carousel-control-prev"
-      href="#carouselExampleFade"
-      role="button"
-      data-slide="prev"
-    >
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a
-      class="carousel-control-next"
-      href="#carouselExampleFade"
-      role="button"
-      data-slide="next"
-    >
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -46,10 +32,10 @@
       <div class="row padding">
         <div class="col-lg-6">
           <h2>Economic impact on GDP</h2>
-          <br/>
+          <br />
           <p>The economic impact of the 2020 coronavirus pandemic in India has been largely disruptive. India's growth in the fourth quarter of the fiscal year 2020 went down to 3.1% according to the Ministry of Statistics.
-           </p>
-           <p> The Chief Economic Adviser to the Government of India said that this drop is mainly due to the coronavirus pandemic effect on the Indian economy.</p>
+          </p>
+          <p> The Chief Economic Adviser to the Government of India said that this drop is mainly due to the coronavirus pandemic effect on the Indian economy.</p>
 
           <br />
           <a href="/gdp" target="_blank"><button class="btn btn-primary">Learn More</button></a>
@@ -81,11 +67,7 @@
       <div class="row padding">
         <div class="col-md-4">
           <div class="card">
-            <img
-              class="card-img-top teamdoctor"
-              src="/images/doctor1.1.jpg"
-              alt=""
-            />
+            <img class="card-img-top teamdoctor" src="/images/doctor1.1.jpg" alt="" />
             <div class="card-body meet">
               <h4 class="card-title">Doctors</h4>
               <p class="card-text">
@@ -96,15 +78,11 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img
-              class="card-img-top teamworker"
-              src="images/workers1.6.jpg"
-              alt=""
-            />
+            <img class="card-img-top teamworker" src="images/workers1.6.jpg" alt="" />
             <div class="card-body meet">
               <h4 class="card-title">Workers</h4>
               <p class="card-text">
-              <i>No matter how much falls on us, we keep plowing ahead. That's the only way to keep roads clear.</i>
+                <i>No matter how much falls on us, we keep plowing ahead. That's the only way to keep roads clear.</i>
               </p>
 
             </div>
@@ -112,15 +90,11 @@
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img
-              class="card-img-top teampolice"
-              src="/images/police1.cms"
-              alt=""
-            />
+            <img class="card-img-top teampolice" src="/images/police1.cms" alt="" />
             <div class="card-body meet">
               <h4 class="card-title">Soldiers</h4>
               <p class="card-text">
-            <i>You are the greatest hero in this story. Your intelligence, bravery and compassion are the saving grace of this nation during this dark episode.</i>
+                <i>You are the greatest hero in this story. Your intelligence, bravery and compassion are the saving grace of this nation during this dark episode.</i>
               </p>
 
             </div>
@@ -192,7 +166,7 @@
             </p>
             <a href="/coronvavirushelplinenumber.pdf" class="btn btn-primary">Go in Detail</a>
             <!-- <embed src="/coronvavirushelplinenumber.pdf"   height="700px" width="500"> -->
-              <!-- <iframe src="/coronvavirushelplinenumber.pdf" frameborder="0" height="100px"></iframe> -->
+            <!-- <iframe src="/coronvavirushelplinenumber.pdf" frameborder="0" height="100px"></iframe> -->
           </div>
         </div>
       </div>
@@ -202,29 +176,29 @@
   <hr class="my-4" />
 
   <!-- form -->
-    <section id="suggestionForm">
-      <div class="container-fluid">
-        <div class="row welcome text-center">
-          <div class="col-12">
-            <h1 class="display-5">Suggestion Form</h1>
-          </div>
-          <hr />
+  <section id="suggestionForm">
+    <div class="container-fluid">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 class="display-5">Suggestion Form</h1>
+        </div>
+        <hr />
+      </div>
+    </div>
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-md-4">
+          <img src="images/suggest.png" class="suggestimg1" alt="" />
+        </div>
+        <div class="col-md-4 middle">
+          <a href="/users/saveform" class="submitdirect">Click here to Submit form</a>
+        </div>
+        <div class="col-md-4 center">
+          <img src="images/image4.png" class="suggestimg2" alt="">
         </div>
       </div>
-      <div class="container-fluid padding">
-        <div class="row padding">
-          <div class="col-md-4">
-            <img src="images/suggest.png" class="suggestimg1" alt="" />
-          </div>
-          <div class="col-md-4 middle">
-            <a href="/users/saveform" class="submitdirect">Click here to Submit form</a>
-          </div>
-          <div class="col-md-4 center">
-            <img src="images/image4.png" class="suggestimg2" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
+    </div>
+  </section>
 
   <hr class="my-4" />
   <%- include("footer") -%>
