--- a/views/nav2.ejs
+++ b/views/nav2.ejs
@@ -11,8 +11,27 @@
 
   <title>Covid-19</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="../css/styles.css" />
-</head>
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+   
+   <!-- Font Awesome -->
+   <script
+   src="https://kit.fontawesome.com/996973c893.js"
+   crossorigin="anonymous"
+   ></script>
+   
+   <!-- Google Fonts -->
+   <link
+   href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&display=swap"
+     rel="stylesheet"
+   />
+   
+   <link rel="stylesheet" href="../css/styles.css" />
+   <!-- Chart.js -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+  </head>
 
 
 <body>
